--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,8 +44,9 @@
 }
 
 .header_top_lvl1 {
-  background: #ffe6db82;
+  background: #C2F9FF;
   border-radius: 0 0 30px 30px;
+  padding: 1px;
 }
 
 .header_top {
@@ -65,7 +66,7 @@ body {
   background-position: top right;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-color: #ebd4ca;
+  background-color: #dbdbdb;
   margin: 0 auto;
 }
 body .desc {
@@ -76,8 +77,9 @@ body .blocks {
   border: 1px solid #DFDFDF;
   border-radius: 10px;
 }
-body .tegs {
+body a.tegs {
   color: green;
+  font-weight: bold;
   -webkit-text-decoration: dotted;
           text-decoration: dotted;
 }
@@ -120,4 +122,14 @@ body .tegs {
   color: red;
   font-weight: bold;
   border-radius: 10px 10px;
+}
+
+.pagination_bootstrap {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.footer_bottom {
+  background: #C2F9FF;
+  border-radius: 30px 30px 0 0;
 }
