--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,8 +17,9 @@
 	}
 }
 .header_top_lvl1{
-	background:#ffe6db82;
+	background:#C2F9FF;
 	border-radius:0 0 30px 30px;
+	padding:1px;
 }
 .header_top{
 	border-bottom:1px solid #000CFA;
@@ -37,7 +38,7 @@ body{
 	background-position:top right;
 	background-attachment:fixed;
 	background-repeat: no-repeat;
-	background-color:#ebd4ca;
+	background-color:#dbdbdb;
 	margin:0 auto;
 
 	.desc{
@@ -49,8 +50,9 @@ body{
 		border-radius:10px;
 
 	}
-	.tegs{
+	a.tegs{
 		color:green;
+		font-weight:bold;
 		text-decoration:dotted;
 	}
 }
@@ -89,4 +91,13 @@ body{
 	color:red;
 	font-weight:bold;
 	border-radius:10px 10px;
+}
+.pagination_bootstrap{
+	margin:0 auto;
+	text-align:center;
+
+}
+.footer_bottom{
+	background:#C2F9FF;
+	border-radius:30px 30px 0 0;
 }
