--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,103 +1,19 @@
 @import 'colorcircle';
+@import 'background';
+@import 'blocks';
+@import 'blocks_add';
 
 .wrapper{
-	a{
-		text-decoration:none;
+	font-family: 'Balsamiq Sans', cursive;
+} 
+	
+input:hover, textarea:hover {outline: none;}
+:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+.logo_ga{
+	img{
+		max-width:100px;
 	}
-	:active, :hover, :focus {
-	    outline: 0;
-	    outline-offset: 0;
-	    box-shadow: none;
-	}
-}
-.author{
-	text-align:right;
-	a{
-		margin-right:20px;
-	}
-}
-.header_top_lvl1{
-	background:#C2F9FF;
-	border-radius:0 0 30px 30px;
-	padding:1px;
-}
-.header_top{
-	border-bottom:1px solid #000CFA;
-	li:hover{
-		a{
-			/*color:green;*/
-		}
-	}
-}
-.header_top_active{
-		border-top:1px solid #000CFA;
-}
-body{
-	max-width:800px;
-	background-image:url('/public/images/f1.svg');
-	background-position:top right;
-	background-attachment:fixed;
-	background-repeat: no-repeat;
-	background-color:#dbdbdb;
-	margin:0 auto;
-
-	.desc{
-		color:#3A3A3A;
-		font-size:120%;
-	}
-	.blocks{
-		border:1px solid #DFDFDF;
-		border-radius:10px;
-
-	}
-	a.tegs{
-		color:green;
-		font-weight:bold;
-		text-decoration:dotted;
-	}
-}
-.blocks_two{
-	width:90%;
-	margin-right:0;
-	background:#fff6f25a;
-	border-bottom:1px solid #DFDFDF;
-}
-.blocks_red{
-	width:90%;
-	margin-right:0;
-	background:#fff6f25a;
-	border-bottom:1px solid #DFDFDF;
-}
-.success{
-
-	background:#fff6f25a;
-	color:green;
-	font-weight:bold;
-}
-.res{
-	background:#D7F2B4;
-	width:30px;
-	height:30px;
-	border-radius:15px;
-	float:right;
-}
-
-.add_blocks{
-	background:#f2f0ff;
-	display:none;
-}
-.error_message{
-	background:#f2f0ff84;
-	color:red;
-	font-weight:bold;
-	border-radius:10px 10px;
-}
-.pagination_bootstrap{
-	margin:0 auto;
-	text-align:center;
-
-}
-.footer_bottom{
-	background:#C2F9FF;
-	border-radius:30px 30px 0 0;
 }
